@startuml
skinparam classAttributeIconSize 0

class Team {
  +id: int
  +name: string
  +coachName: string
  +city: string
  +createdAt: datetime
}

class Player {
  +id: int
  +teamId: int
  +firstName: string
  +lastName: string
  +position: string
  +jerseyNumber: int
  +birthdate: date
  +email: string
  +active: boolean
  +createdAt: datetime
}

class Referee {
  +id: int
  +firstName: string
  +lastName: string
  +licenseCode: string
  +category: string
  +phone: string
  +email: string
  +active: boolean
  +createdAt: datetime
}

enum MatchStatus {
  scheduled
  played
  cancelled
}

class Match {
  +id: int
  +matchDate: date
  +matchTime: time
  +venue: string
  +status: MatchStatus
  +homeGoals: int
  +awayGoals: int
  +createdAt: datetime
}

' --- Asociaciones y cardinalidades ---

Team "1" -- "0..*" Player : tiene >
Player "0..*" --> "1" Team : pertenece a >

Match "1" --> "1" Team : home_team
Match "1" --> "1" Team : away_team

Match "0..*" --> "1" Referee : es dirigido por >

Match "*" --> "1" MatchStatus : tiene estado >

note right of Match
  Restricciones:
  - home_team != away_team
  - homeGoals >= 0
  - awayGoals >= 0
end note

@enduml
